Merge branch 'fix/NNO-10909' into 'master'